--- a/download.html
+++ b/download.html
@@ -35,20 +35,13 @@
       <div id="content">
         <div class="content_item">
           <h1>Download Project: Starfighter</h1>
-          <p>Following are downloads for the latest version of Project: Starfighter. I cannot build Starfighter for all systems, so if your OS is not listed here and you would like it to be, feel free to send a build to me at <a href="mailto:onpon4@riseup.net">onpon4@riseup.net</a>. If you would like an older version of Starfighter, you can find it in the <a href="http://download.savannah.gnu.org/releases/starfighter/">releases directory</a>.</p>
+          <p>Following are downloads for the latest version of Project: Starfighter. I cannot build Starfighter for all systems, so if your OS is not listed here and you would like it to be, feel free to send a build to me at <a href="mailto:onpon4@riseup.net">onpon4@riseup.net</a>. If you would like an older version of Starfighter, you can find it in the <a href="https://github.com/pr-starfighter/starfighter/releases">list of releases on GitHub</a> or the <a href="http://download.savannah.gnu.org/releases/starfighter/">old Savannah releases directory</a>.</p>
           <ul>
-            <li>Windows: <a href="http://download.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-win32.zip">starfighter-1.7-win32.zip</a> (<a href="http://download-mirror.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-win32.zip">Alternate link</a>)</li>
-            <li>GNU/Linux (32-bit): <a href="http://download.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-gnulinux-i486.tar.gz">starfighter-1.7-gnulinux-i486.tar.gz</a> (<a href="http://download-mirror.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-gnulinux-i486.tar.gz">Alternate link</a>)</li>
-            <li>GNU/Linux (64-bit): <a href="http://download.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-gnulinux-x86_64.tar.gz">starfighter-1.7-gnulinux-x86_64.tar.gz</a> (<a href="http://download-mirror.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-gnulinux-x86_64.tar.gz">Alternate link</a>)</li>
-            <li>Slackware (32-bit): <a href="http://download.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-slackware-i586.tgz">starfighter-1.7-slackware-i586.tgz</a> (<a href="http://download-mirror.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-slackware-i586.tgz">Alternate link</a>)</li>
-            <li>Slackware (64-bit): <a href="http://download.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-slackware-x86_64.tgz">starfighter-1.7-slackware-x86_64.tgz</a> (<a href="http://download-mirror.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-slackware-x86_64.tgz">Alternate link</a>)</li>
-            <li>Source code (tar.gz): <a href="http://download.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-src.tar.gz">starfighter-1.7-src.tar.gz</a> (<a href="http://download-mirror.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-src.tar.gz">Alternate link</a>)</li>
-            <li>Source code (zip): <a href="http://download.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-src.zip">starfighter-1.7-src.zip</a> (<a href="http://download-mirror.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-src.zip">Alternate link</a>)</li>
-          </ul>
-          <p>You can also get Starfighter on itch.io and GameJolt:</p>
-          <ul>
-            <li><a href="https://onpon4.itch.io/starfighter">https://onpon4.itch.io/starfighter</a></li>
-            <li><a href="http://gamejolt.com/games/starfighter/244755">http://gamejolt.com/games/starfighter/244755</a></li>
+            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.0/starfighter-2.0-win32.zip">Windows</a></li>
+            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.0/starfighter-2.0-linux-i686.tar.gz">Linux (32-bit)</a></li>
+            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.0/starfighter-2.0-linux-amd64.tar.gz">Linux (64-bit)</a></li>
+            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.0/starfighter-2.0-src.tar.gz">Source code (tar.gz)</a> (<a href="http://download-mirror.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-src.tar.gz">Alternate link</a>)</li>
+            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.0/starfighter-2.0-src.zip">Source code (zip)</a></li>
           </ul>
 
           <!--<h3>Outdated Builds</h3>
