--- a/download.html
+++ b/download.html
@@ -40,7 +40,7 @@
             <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.0/starfighter-2.0-win32.zip">Windows</a></li>
             <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.0/starfighter-2.0-linux-i686.tar.gz">Linux (32-bit)</a></li>
             <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.0/starfighter-2.0-linux-amd64.tar.gz">Linux (64-bit)</a></li>
-            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.0/starfighter-2.0-src.tar.gz">Source code (tar.gz)</a> (<a href="http://download-mirror.savannah.gnu.org/releases/starfighter/1.7/starfighter-1.7-src.tar.gz">Alternate link</a>)</li>
+            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.0/starfighter-2.0-src.tar.gz">Source code (tar.gz)</a></li>
             <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.0/starfighter-2.0-src.zip">Source code (zip)</a></li>
           </ul>
 
