Updated contact page.

--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
         <div class="content_item">
           <h1>Contact</h1>
 
-          <p>If you have a bug report or feature request, the best thing to do is to <a href="https://savannah.nongnu.org/bugs/?group=starfighter&func=additem">submit a bug</a> to the <a href="https://savannah.nongnu.org/bugs/?group=starfighter">bug tracker</a>.</p>
-          <p>For all other feedback and inquiries, I can be contacted via email at <a href="mailto:onpon4@riseup.net">onpon4@riseup.net</a>.</p>
+          <p>If you have a bug report or feature request, the best thing to do is to submit an issue to the <a href="https://github.com/pr-starfighter/starfighter/issues">issue tracker</a>.</p>
+          <p>For all other feedback and inquiries, I can be contacted via email at <a href="mailto:diligentcircle@riseup.net">diligentcircle@riseup.net</a>.</p>
         </div><!--close content_item-->
       </div><!--close content-->
     </div><!--close site_content-->
