--- a/download.html
+++ b/download.html
@@ -1,62 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>Download - Project: Starfighter</title>
-  <meta name="description" content="The classic space Shoot'Em Up game originally by Parallel Realities, with new, libre media and various improvements." />
-  <meta name="keywords" content="project, starfighter, parallel, realities, weapco, bainfield, kethlan" />
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <link rel="icon" type="image/png" href="favicon.png" />
+    <title>Download - Project: Starfighter</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="The classic space Shoot'Em Up game originally by Parallel Realities, with new, libre media and various improvements.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body>
-
-  <div id="main">
-    <header>
-      <div id="header_section">
-        <div id="welcome">
-          <h2><img src="images/logo.png" alt="Project: Starfighter"></h2>
-        </div><!--close welcome-->
-
-        <nav>
-          <ul id="nav">
+    <h1 class="header"><img src="images/logo.png" alt="Project: Starfighter"></h1>
+    <nav class="header">
+        <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="screenshots.html">Screenshots</a></li>
             <li class="current"><a href="download.html">Download</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="https://github.com/pr-starfighter/starfighter">Project Page</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+        </ul>
+    </nav>
 
-    <div id="site_content">
-      <div id="content">
-        <div class="content_item">
-          <h1>Download Project: Starfighter</h1>
-          <p>Following are downloads for the latest version of Project: Starfighter. I cannot build Starfighter for all systems, so if your OS is not listed here and you would like it to be, feel free to send a build to me at <a href="mailto:onpon4@riseup.net">onpon4@riseup.net</a>. If you would like an older version of Starfighter, you can find it in the <a href="https://github.com/pr-starfighter/starfighter/releases">list of releases on GitHub</a> or the <a href="http://download.savannah.gnu.org/releases/starfighter/">old Savannah releases directory</a>.</p>
-          <ul>
+    <main>
+        <h2>Download</h2>
+        <p>Following are downloads for the latest version of Project: Starfighter. I cannot build Starfighter for all systems, so if your OS is not listed here and you would like it to be, feel free to send a build to me at <a href="mailto:diligentcircle@riseup.net">diligentcircle@riseup.net</a>. If you would like an older version of Starfighter, you can find it in the <a href="https://github.com/pr-starfighter/starfighter/releases">list of releases on GitHub</a> or the <a href="http://download.savannah.gnu.org/releases/starfighter/">old Savannah releases directory</a>.</p>
+        <ul>
             <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1/starfighter-2.1-win32.zip">Windows</a></li>
             <!--<li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1/starfighter-2.1-linux-i686.tar.gz">Linux (32-bit)</a></li>-->
             <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1/starfighter-2.1-linux-amd64.tar.gz">Linux (64-bit)</a></li>
             <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1/starfighter-2.1-src.tar.gz">Source code (tar.gz)</a></li>
             <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1/starfighter-2.1-src.zip">Source code (zip)</a></li>
-          </ul>
+        </ul>
+    </main>
 
-          <!--<h3>Outdated Builds</h3>
-          <p>Following are builds of older versions of Project: Starfighter which have not been replaced by builds of the latest version. Please feel free to send me updated builds for these systems if you are so inclined.</p>
-          <ul>
-          </ul>-->
-        </div><!--close content_item-->
-      </div><!--close content-->
-    </div><!--close site_content-->
-
-    <footer>
-      <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="CC BY-SA" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/3.0/88x31.png"></a><br />Except where otherwise noted, this page is licensed under the <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br /><br />
-      website template by <a href="http://www.freehtml5templates.co.uk">Free HTML5 Templates</a>
-    </footer>
-  </div><!--close main-->
-
+    <div class="footer">
+        <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="CC BY-SA" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/3.0/88x31.png"></a><br>This page is licensed under the <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+    </div>
 </body>
+
 </html>
