--- a/contact.html
+++ b/contact.html
@@ -1,52 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <title>Contact - Project: Starfighter</title>
-  <meta name="description" content="The classic space Shoot'Em Up game originally by Parallel Realities, with new, libre media and various improvements." />
-  <meta name="keywords" content="project, starfighter, parallel, realities, weapco, bainfield, kethlan" />
-  <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <link rel="icon" type="image/png" href="favicon.png" />
+    <title>Contact - Project: Starfighter</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="The classic space Shoot'Em Up game originally by Parallel Realities, with new, libre media and various improvements.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 
 <body>
-
-  <div id="main">
-    <header>
-      <div id="header_section">
-        <div id="welcome">
-          <h2><img src="images/logo.png" alt="Project: Starfighter"></h2>
-        </div><!--close welcome-->
-
-        <nav>
-          <ul id="nav">
+    <h1 class="header"><img src="images/logo.png" alt="Project: Starfighter"></h1>
+    <nav class="header">
+        <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="screenshots.html">Screenshots</a></li>
             <li><a href="download.html">Download</a></li>
             <li class="current"><a href="contact.html">Contact</a></li>
             <li><a href="https://github.com/pr-starfighter/starfighter">Project Page</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+        </ul>
+    </nav>
 
-    <div id="site_content">
-      <div id="content">
-        <div class="content_item">
-          <h1>Contact</h1>
+    <main>
+        <h2>Contact</h2>
+        <p>If you have a bug report or feature request, the best thing to do is to submit an issue to the <a href="https://github.com/pr-starfighter/starfighter/issues">issue tracker</a>.</p>
+        <p>For all other feedback and inquiries, I can be contacted via email at <a href="mailto:diligentcircle@riseup.net">diligentcircle@riseup.net</a>.</p>
+    </main>
 
-          <p>If you have a bug report or feature request, the best thing to do is to submit an issue to the <a href="https://github.com/pr-starfighter/starfighter/issues">issue tracker</a>.</p>
-          <p>For all other feedback and inquiries, I can be contacted via email at <a href="mailto:diligentcircle@riseup.net">diligentcircle@riseup.net</a>.</p>
-        </div><!--close content_item-->
-      </div><!--close content-->
-    </div><!--close site_content-->
-
-    <footer>
-      <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="CC BY-SA" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/3.0/88x31.png"></a><br />Except where otherwise noted, this page is licensed under the <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.<br /><br />
-      website template by <a href="http://www.freehtml5templates.co.uk">Free HTML5 Templates</a>
-    </footer>
-  </div><!--close main-->
-
+    <div class="footer">
+        <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="CC BY-SA" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/3.0/88x31.png"></a><br>This page is licensed under the <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
+    </div>
 </body>
+
 </html>
