--- a/download.html
+++ b/download.html
@@ -26,11 +26,10 @@
         <h2>Download</h2>
         <p>Following are downloads for the latest version of Project: Starfighter. I cannot build Starfighter for all systems, so if your OS is not listed here and you would like it to be, feel free to send a build to me at <a href="mailto:diligentcircle@riseup.net">diligentcircle@riseup.net</a>. If you would like an older version of Starfighter, you can find it in the <a href="https://github.com/pr-starfighter/starfighter/releases">list of releases on GitHub</a> or the <a href="http://download.savannah.gnu.org/releases/starfighter/">old Savannah releases directory</a>.</p>
         <ul>
-            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1/starfighter-2.1-win32.zip">Windows</a></li>
-            <!--<li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1/starfighter-2.1-linux-i686.tar.gz">Linux (32-bit)</a></li>-->
-            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1/starfighter-2.1-linux-amd64.tar.gz">Linux (64-bit)</a></li>
-            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1/starfighter-2.1-src.tar.gz">Source code (tar.gz)</a></li>
-            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1/starfighter-2.1-src.zip">Source code (zip)</a></li>
+            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1.1/starfighter-2.1.1-win32.zip">Windows</a></li>
+            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1.1/starfighter-2.1.1-linux-x86_64.tar.gz">Linux (64-bit)</a></li>
+            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1.1/starfighter-2.1.1-src.tar.gz">Source code (tar.gz)</a></li>
+            <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1.1/starfighter-2.1.1-src.zip">Source code (zip)</a></li>
         </ul>
     </main>
 
