Added Patreon link

--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
             <li><a href="download.html">Download</a></li>
             <li class="current"><a href="contact.html">Contact</a></li>
             <li><a href="https://github.com/pr-starfighter/starfighter">Project Page</a></li>
+            <li><a href="https://www.patreon.com/diligentcircle">Patreon</a></li>
         </ul>
     </nav>
 
