Added a link to version 1.1 on the Wayback Machine.

--- a/download.html
+++ b/download.html
@@ -32,6 +32,7 @@
             <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1.1/starfighter-2.1.1-src.tar.gz">Source code (tar.gz)</a></li>
             <li><a href="https://github.com/pr-starfighter/starfighter/releases/download/v2.1.1/starfighter-2.1.1-src.zip">Source code (zip)</a></li>
         </ul>
+        <p>If you'd like to see how far the game has come, or if you'd simply like to see how the original game looked (with its unlicensed art assets), the Wayback Machine still has a copy of version 1.1, the last version released by Parallel Realities. Do keep in mind that this old code is buggy and filled with memory access bugs, albeit memory access bugs that shouldn't cause problems outside the game. It can be found here: <a href="https://web.archive.org/web/20051016190326/http://www.parallelrealities.co.uk/download.php?file=starfighter-1.1-1.tar.gz&type=zip">https://web.archive.org/web/20051016190326/http://www.parallelrealities.co.uk/download.php?file=starfighter-1.1-1.tar.gz&type=zip</a></p>
     </main>
 
     <div class="footer">
