Added a warning about the trailer.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <a href="https://goblinrefuge.com/mediagoblin/u/onpon4/m/project-starfighter-trailer/"><img src="images/screenshot1.png" alt=""></a>
         </video>
         <h2>Home</h2>
+        <p><mark>CW: The trailer video to the right (which I made years ago) has a higher volume than it should and the high volume starts suddenly a few seconds in after silence. I'll be fixing this soon by making a new trailer; in the meantime, you may want to turn down your volume (or the volume of the video) before playing the video.</mark></p>
         <p>In the year 2579, the intergalactic weapons corporation, WEAPCO, has dominated the galaxy. Guide Chris Bainfield and his friend Sid Wilson on their quest to liberate the galaxy from the clutches of WEAPCO. Along the way, you will encounter new foes, make new allies, and assist local rebels in strikes against the evil corporation.</p>
         <p>Originally developed by <a href="http://www.parallelrealities.co.uk/">Parallel Realities</a> in 2003, Project: Starfighter is a side-scrolling shoot 'em up space game, released under the GNU GPL. Consisting of 26 engaging levels spanning four planetary systems, this classic game will entertain for hours.</p>
         <p>Unfortunately, the original Project: Starfighter used images, sound effects, and music which were not properly licensed. As such, this version of the game replaces those art assets with libre art assets. But that's not all; in addition to being legally distributable, this version of Project: Starfighter has several other improvements over the original:</p>
@@ -44,7 +45,6 @@
             <li><b>Improved code quality:</b> Several instances of magic numbers and other bad programming practices have been removed, making the code much easier to read. The code has also been fully converted from C++ to C.</li>
             <li><b>A myriad of bug fixes.</b> Some examples include wrap-around bugs that occurred with ammunition, shop bugs which caused the sale prices of some items to be higher than their buy prices, and bugs which caused cheats to render certain missions unwinnable.</li>
         </ul>
-        <p>Want to see what the game is like? Check out <a href="https://archive.org/details/ProjectStarfighterTrailer">this trailer</a>!</p>
         <p>For more games by Parallel Realities, see their website:</p>
         <p><a href="http://www.parallelrealities.co.uk/">http://www.parallelrealities.co.uk/</a></p>
         <p>There is also a novelization of Project: Starfighter by the original author of the game, which can be found here:</p>
