Replaced warning with muting the video.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
 
     <main>
-        <video class="floating" controls>
+        <video class="floating" controls muted>
             <source src="https://b2aeaa58a57a200320db-8b65b95250e902c437b256b5abf3eac7.ssl.cf5.rackcdn.com/media_entries/13429/Project_Starfighter_Trailer.webm" type="video/webm">
             <source src="https://archive.org/download/ProjectStarfighterTrailer/Project:%20Starfighter%20Trailer.webm" type="video/webm">
             <source src="https://archive.org/download/ProjectStarfighterTrailer/Project:%20Starfighter%20Trailer.ogv" type="video/ogg">
@@ -33,7 +33,6 @@
             <a href="https://goblinrefuge.com/mediagoblin/u/onpon4/m/project-starfighter-trailer/"><img src="images/screenshot1.png" alt=""></a>
         </video>
         <h2>Home</h2>
-        <p><mark>CW: The trailer video to the right (which I made years ago) has a higher volume than it should and the high volume starts suddenly a few seconds in after silence. I'll be fixing this soon by making a new trailer; in the meantime, you may want to turn down your volume (or the volume of the video) before playing the video.</mark></p>
         <p>In the year 2579, the intergalactic weapons corporation, WEAPCO, has dominated the galaxy. Guide Chris Bainfield and his friend Sid Wilson on their quest to liberate the galaxy from the clutches of WEAPCO. Along the way, you will encounter new foes, make new allies, and assist local rebels in strikes against the evil corporation.</p>
         <p>Originally developed by <a href="http://www.parallelrealities.co.uk/">Parallel Realities</a> in 2003, Project: Starfighter is a side-scrolling shoot 'em up space game, released under the GNU GPL. Consisting of 26 engaging levels spanning four planetary systems, this classic game will entertain for hours.</p>
         <p>Unfortunately, the original Project: Starfighter used images, sound effects, and music which were not properly licensed. As such, this version of the game replaces those art assets with libre art assets. But that's not all; in addition to being legally distributable, this version of Project: Starfighter has several other improvements over the original:</p>
