Added updated trailer

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </nav>
 
     <main>
-        <video class="floating" controls muted>
-            <source src="https://b2aeaa58a57a200320db-8b65b95250e902c437b256b5abf3eac7.ssl.cf5.rackcdn.com/media_entries/13429/Project_Starfighter_Trailer.webm" type="video/webm">
+        <video class="floating" controls>
+            <source src="video/starfighter_trailer.webm" type="video/webm">
             <source src="https://archive.org/download/ProjectStarfighterTrailer/Project:%20Starfighter%20Trailer.webm" type="video/webm">
             <source src="https://archive.org/download/ProjectStarfighterTrailer/Project:%20Starfighter%20Trailer.ogv" type="video/ogg">
             <source src="https://archive.org/download/ProjectStarfighterTrailer/Project:%20Starfighter%20Trailer.mp4" type="video/mp4">
