--- a/screenshots.html
+++ b/screenshots.html
@@ -35,6 +35,7 @@
 
         <h2>Videos</h2>
         <ul>
+            <li><a href="https://www.youtube.com/watch?v=dDP-44If-bU">Project: Starfighter Trailer</a></li>
             <li><a href="https://goblinrefuge.com/mediagoblin/u/onpon4/m/project-starfighter-endgame/">Project: Starfighter Endgame</a></li>
             <li><a href="https://goblinrefuge.com/mediagoblin/u/onpon4/m/project-starfighter-1-4-gameplay/">Project: Starfighter 1.4 Gameplay</a></li>
             <li><a href="https://goblinrefuge.com/mediagoblin/u/onpon4/m/project-starfighter-1-3-gameplay/">Project: Starfighter 1.3 Gameplay</a></li>
