--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="https://github.com/pr-starfighter/starfighter">Project Page</a></li>
             <li><a href="https://liberapay.com/diligentcircle/">Liberapay</a></li>
             <li><a href="https://www.patreon.com/diligentcircle">Patreon</a></li>
+            <li><a href="https://discord.gg/P6gkGSr">Discord</a></li>
         </ul>
     </nav>
 
