--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p><a href="http://www.parallelrealities.co.uk/">http://www.parallelrealities.co.uk/</a></p>
         <p>There is also a novelization of Project: Starfighter by the original author of the game, which can be found here:</p>
         <p><a href="http://www.stephenjsweeney.com/books/ps/">http://www.stephenjsweeney.com/books/ps/</a></p>
-        <p>For other games I've made or worked on, see my homepage:</p>
+        <p>Project: Starfighter is currently maintained by The Diligent Circle. For other games we've made or worked on, see our homepage:</p>
         <p><a href="https://onpon4.github.io">https://onpon4.github.io</a></p>
     </main>
 
