--- a/download.html
+++ b/download.html
@@ -32,7 +32,10 @@
             <li><a href="https://gamejolt.com/games/starfighter/244755">GameJolt page</a></li>
             <li><a href="https://diligentcircle.itch.io/starfighter">itch.io page</a></li>
         </ul>
-        <p>If you'd like to see how far the game has come, or if you'd simply like to see how the original game looked (with its unlicensed art assets), the Wayback Machine still has a copy of version 1.1, the last version released by Parallel Realities, archived. Do keep in mind that this old code is filled with bugs, including memory access bugs, albeit memory access bugs that shouldn't cause problems outside the game. It can be found here: <a href="https://web.archive.org/web/20051016190326/http://www.parallelrealities.co.uk/download.php?file=starfighter-1.1-1.tar.gz&type=zip">https://web.archive.org/web/20051016190326/http://www.parallelrealities.co.uk/download.php?file=starfighter-1.1-1.tar.gz&type=zip</a></p>
+        <p>If you'd like to see how far the game has come, or if you'd simply like to see how the original game looked (with its unlicensed art assets), the Wayback Machine still has a copy of version 1.1, the last version released by Parallel Realities, archived. Do keep in mind that this old code is filled with bugs, including memory access bugs, albeit memory access bugs that shouldn't cause problems outside the game. It can be found here:</p>
+        <ul>
+            <li><a href="https://web.archive.org/web/20051016190326/http://www.parallelrealities.co.uk/download.php?file=starfighter-1.1-1.tar.gz&type=zip">https://web.archive.org/web/20051016190326/http://www.parallelrealities.co.uk/download.php?file=starfighter-1.1-1.tar.gz&type=zip</a></li>
+        </ul>
     </main>
 
     <div class="footer">
