--- a/download.html
+++ b/download.html
@@ -28,9 +28,9 @@
         <h2>Download</h2>
         <p>The latest version of Project: Starfighter can be downloaded via any of the following official sources:</p>
         <ul>
-            <li><a href="https://github.com/pr-starfighter/starfighter/releases/latest">Main Release Page</a> (an <a href="https://github.com/pr-starfighter/starfighter/releases.atom">Atom feed</a> is also available)</li>
-            <li><a href="https://gamejolt.com/games/starfighter/244755">GameJolt page</a></li>
-            <li><a href="https://diligentcircle.itch.io/starfighter">itch.io page</a></li>
+            <li><a href="https://github.com/pr-starfighter/starfighter/releases/latest">Releases on GitHub</a> (an <a href="https://github.com/pr-starfighter/starfighter/releases.atom">Atom feed</a> is also available)</li>
+            <li><a href="https://gamejolt.com/games/starfighter/244755">GameJolt</a></li>
+            <li><a href="https://diligentcircle.itch.io/starfighter">itch.io</a></li>
         </ul>
         <p>If you'd like to see how far the game has come, or if you'd simply like to see how the original game looked (with its unlicensed art assets), the Wayback Machine still has a copy of version 1.1, the last version released by Parallel Realities, archived. Do keep in mind that this old code is filled with bugs, including memory access bugs, albeit memory access bugs that shouldn't cause problems outside the game. It can be found here:</p>
         <ul>
