--- a/old.html
+++ b/old.html
@@ -51,6 +51,9 @@
         <h3 id="overflow">Plasma Overflow</h3>
         <p>In Project: Starfighter 1.1, it was sometimes possible for the amount of plasma you had to overflow; for instance, if you had 240 plasma and gained 40, the amount of plasma you had would "increase" to 25, i.e. you would lose nearly all your ammo. This rather annoying bug was caused by the fact that the amount of ammo you had was stored in an unsigned char type variable, meaning it was 8 bits. The current version of Project: Starfighter instead uses the standard int type (which is guaranteed by C to be at least 16-bit), so there is no chance of overflow with numbers as small as 250. The bug is not simulated in Classic difficulty because there's no reason anyone would <em>want</em> to lose ammo, and so fixing this particular bug is clearly a positive.</p>
 
+        <h3 id="target">Vanishing Target</h3>
+        <p>Project: Starfighter 1.1 made the targeting arrow vanish when a radio message (e.g. Phoebe or Ursula bragging or yelling at you) appeared. The reason for this behavior was simply that the game placed the radio message boxes and the targeting arrow in the same place, and so showing them both at the same time would have looked ugly. The current version of Project: Starfighter has many more radio messages than version 1.1 did, including brag messages from Chris Bainfield, so repeating this behavior in Classic difficulty would be rather annoying. Instead, the targeting arrow is moved further down so that it's below radio messages when they display and therefore doesn't have to shut off when a radio message appears.</p>
+
         <h3 id="uncounted">Uncounted Progress</h3>
         <p>Project: Starfighter 1.1 had a bug where if you rescued slaves for the Eyananth slave rescue mission after the interception was destroyed, the rescued slaves would not count toward the mission. This is kept fixed in Classic difficulty because it's clearly a bug and very frustrating to deal with.</p>
 
