--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     <main>
         <h2>Contact</h2>
         <p>If you have a bug report or feature request, the best thing to do is to submit an issue to the <a href="https://github.com/pr-starfighter/starfighter/issues">issue tracker</a>.</p>
-        <p>For all other feedback and inquiries, we can be contacted via email at <a href="mailto:diligentcircle@riseup.net">diligentcircle@riseup.net</a>.</p>
+        <p>For all other feedback and inquiries, we can be contacted via email at <a href="mailto:pr-starfighter@riseup.net">pr-starfighter@riseup.net</a>.</p>
     </main>
 
     <div class="footer">
