--- a/screenshots.html
+++ b/screenshots.html
@@ -34,12 +34,8 @@
         </div>
 
         <h2>Videos</h2>
-        <ul>
-            <li><a href="https://www.youtube.com/watch?v=EJuu7GCQhQw">Project: Starfighter Trailer</a></li>
-            <li><a href="https://goblinrefuge.com/mediagoblin/u/onpon4/m/project-starfighter-endgame/">Project: Starfighter Endgame</a></li>
-            <li><a href="https://goblinrefuge.com/mediagoblin/u/onpon4/m/project-starfighter-1-4-gameplay/">Project: Starfighter 1.4 Gameplay</a></li>
-            <li><a href="https://goblinrefuge.com/mediagoblin/u/onpon4/m/project-starfighter-1-3-gameplay/">Project: Starfighter 1.3 Gameplay</a></li>
-        </ul>
+        <h3>Trailer</h3>
+        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/EJuu7GCQhQw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </main>
 
     <div class="footer">
