--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <source src="https://archive.org/download/ProjectStarfighterTrailer/Project:%20Starfighter%20Trailer.webm" type="video/webm">
             <source src="https://archive.org/download/ProjectStarfighterTrailer/Project:%20Starfighter%20Trailer.ogv" type="video/ogg">
             <source src="https://archive.org/download/ProjectStarfighterTrailer/Project:%20Starfighter%20Trailer.mp4" type="video/mp4">
+            <a href="https://www.youtube.com/watch?v=EJuu7GCQhQw"><img src="images/screenshot1.png" alt=""></a>
         </video>
         <h2>Home</h2>
         <p>In the year 2579, the intergalactic weapons corporation, WEAPCO, has dominated the galaxy. Guide Chris Bainfield and his friend Sid Wilson on their quest to liberate the galaxy from the clutches of WEAPCO. Along the way, you will encounter new foes, make new allies, and assist local rebels in strikes against the evil corporation.</p>
